tests/typefunc_bad_ambiguous_call.stderr
tests/typefunc_bad_ambiguous_call.sl:7:2: error: SL2016: ambiguous call
